Fix dice size and alignment
Set the die size to match the element text size (`1em`), and align with
the center of the text (`vertical-align: middle;`).

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Variable definitions */
 :root {
-    --dice-size: 20px;
+    --dice-size: 1em;
 }
 
 /* Document title */
@@ -45,6 +45,7 @@ blockquote {
     width: var(--dice-size);
     height: var(--dice-size);
     content: "";
+    vertical-align: middle;
 }
 
 .die-p {
